--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
@@ -13,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\""
+    "dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +35,7 @@
     "electron": "^3.0.4",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
+    "node-sass": "^4.9.4",
     "wait-on": "^3.1.0"
   }
 }
