--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "i-security",
   "version": "0.1.0",
   "private": true,
-  "main": "main.js",
+  "main": "src/main.js",
   "dependencies": {
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.6",
+    "nedb": "^1.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
