--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.6",
+    "electron-settings": "^3.2.0",
     "nedb": "^1.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
