--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nedb": "^1.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
