--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "i-security",
-  "version": "0.1.0",
+  "name": "iSecurity",
+  "description": "Password Management Desktop app developed with Electron + React.",
+  "version": "1.0.0",
   "private": true,
-  "main": "src/main.js",
+  "main": "public/electron.js",
+  "homepage": "./",
+  "author": "Xing.He",
   "dependencies": {
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
@@ -14,15 +17,33 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\""
+    "dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
+    "pack": "electron-builder --dir",
+    "dist": "yarn run clean && yarn build && electron-builder",
+    "clean": "rm -rf dist build"
+  },
+  "build": {
+    "appId": "com.electron.xinghe.isecurity",
+    "productName": "iSecurity",
+    "copyright": "Copyright © 2018 Xing.He",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "mac": {
+      "category": "public.app-category.productivity",
+      "icon": "build/icon.png"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,10 +55,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "react-scripts": "2.0.5",
     "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "devtron": "^1.4.0",
     "electron": "^3.0.4",
+    "electron-builder": "^20.28.4",
     "electron-debug": "^2.0.0",
     "electron-devtools-installer": "^2.2.4",
     "node-sass": "^4.9.4",
