name 属性不符合规则的时候dev 模式不能启动

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iSecurity",
+  "name": "i-security",
   "description": "Password Management Desktop app developed with Electron + React.",
   "version": "1.0.0",
   "private": true,
